--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,4 +18,40 @@ jobs:
 
     - name: Build Docker image
       run: docker build -t flask-crud-app .
+
+\jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: cruddb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U user -d cruddb"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build Docker image
+      run: docker build -t flask-crud-app .
+
+    - name: Run Flask container
+      run: |
+        docker run -d --name flask-app \
+          --link postgres:postgres \
+          -e DATABASE_URL=postgresql://user:password@postgres:5432/cruddb \
+          -p 5000:5000 flask-crud-app
 
