--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,7 +43,7 @@ jobs:
             sleep 5
           done
 
-      - name: Run Flask container
+           - name: Run Flask container
         run: |
           docker run -d --name flask-app \
             -e DATABASE_URL=postgresql://user:password@localhost:5432/cruddb \
@@ -53,3 +53,11 @@ jobs:
         run: |
           sleep 5
           curl --fail http://localhost:5000/ || exit 1
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Push image
+        run: |
+          docker tag flask-crud-app yourusername/flask-crud-app:latest
+          docker push yourusername/flask-crud-app:latest
